Add support for video inference

--- a/yolov5/CMakeLists.txt
+++ b/yolov5/CMakeLists.txt
@@ -37,6 +37,12 @@ target_link_libraries(yolov5 cudart)
 target_link_libraries(yolov5 myplugins)
 target_link_libraries(yolov5 ${OpenCV_LIBS})
 
+add_executable(usb_camera usb_camera.cpp)
+target_link_libraries(usb_camera opencv_core opencv_highgui opencv_imgproc opencv_imgcodecs)
+
+add_executable(video_inteference_yolov5 video_inteference_yolov5.cpp)
+target_link_libraries(video_inteference_yolov5 nvinfer cudart myplugins ${OpenCV_LIBS})
+
 if(UNIX)
 add_definitions(-O2 -pthread)
 endif(UNIX)
